--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light"><head>
     <meta charset="utf-8">
-    <title>Silicon | Software Dev Agency Landing v.2</title>
+    <title>8tech | from 8 to cloud</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Silicon - Multipurpose Technology Bootstrap Template">
+    <meta name="description" content="8tech - from 8 to cloud">
     <meta name="keywords" content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative">
-    <meta name="author" content="Createx Studio">
+    <meta name="author" content="8tech">
 
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
   <!-- Body -->
   <body>
     <main class="page-wrapper">
-      <header class="header navbar navbar-expand-lg navbar-dark position-absolute">
+      <header class="header navbar navbar-expand-lg navbar-dark position-absolute navbar-sticky">
         <div class="container px-3">
           <a href="index.html" class="navbar-brand pe-3">
             <img src="assets/img/logo.png" width="47" alt="8tech" class="rounded-circle">
@@ -82,38 +82,37 @@
 
       <!-- Our Services -->
       <section class="container my-5 py-lg-5 py-md-4 pt-2 pb-3">
-        <h2 class="h1 mb-md-5 mb-4 py-xl-3 pb-lg-2 pb-md-0 pb-sm-2 text-center">Our Services</h2>
+        <h2 class="h1 mb-md-5 mb-4 py-xl-3 pb-lg-2 pb-md-0 pb-sm-2 text-center">Dịch vụ của 8tech</h2>
 
         <!-- Service item -->
         <div class="row gy-4 mb-5 pb-xl-5 pb-md-4 pb-3">
-          <div class="col-lg-5 col-md-6 order-md-1 order-2 d-flex rellax" data-rellax-percentage="0.5" data-rellax-speed="-0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, -32px, 0px);">
+          <div class="col-lg-5 col-md-6 order-md-1 order-2 d-flex rellax" data-rellax-percentage="0.5" data-rellax-speed="-0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, 15px, 0px);">
             <div class="align-self-center pe-lg-0 pe-md-4">
-              <h3 class="mb-md-4">Product Design</h3>
-              <p class="mb-md-4 mb-3 fs-lg">Nullam semper enim quis vulputate mollis. Donec ultrices elementum mauris, ac porttitor mi cursus eget. Vestibulum gravida risus et lacus finibus tincidunt. Vivamus dui ante, pharetra eu blandit ac, vulputate et diam eu faucibus.</p>
+              <h3 class="mb-md-4">Phát triển phần mềm tùy chỉnh</h3>
+              <p class="mb-md-4 mb-3 fs-lg">Đây là giải pháp dành riêng cho các khách hàng đang tìm kiếm sự linh hoạt và hiệu quả tối đa trong công nghệ. Chúng tôi không chỉ tạo ra những phần mềm “may đo” đáp ứng chính xác nhu cầu của bạn, mà còn đảm bảo các sản phẩm có khả năng mở rộng và nâng cấp lâu dài.</p>
               <hr class="my-md-4 my-3">
               <ul class="list-unstyled d-flex flex-wrap mt-md-n3 mt-n2 ms-md-n4 ms-n3 mb-0 pb-lg-4 pb-md-2 fw-bold">
-                <li class="mt-md-3 mt-2 ms-md-4 ms-3">UX/UI</li>
-                <li class="mt-md-3 mt-2 ms-md-4 ms-3">Web design</li>
-                <li class="mt-md-3 mt-2 ms-md-4 ms-3">Interactive design</li>
-                <li class="mt-md-3 mt-2 ms-md-4 ms-3">Motion design</li>
+                <li class="mt-md-3 mt-2 ms-md-4 ms-3">CRM</li>
+                <li class="mt-md-3 mt-2 ms-md-4 ms-3">HRM</li>
+                <li class="mt-md-3 mt-2 ms-md-4 ms-3">Project Management</li>
+                <li class="mt-md-3 mt-2 ms-md-4 ms-3">LMS</li>
               </ul>
-              <a href="#" class="btn btn-lg btn-outline-primary w-sm-auto w-100 mt-4">Learn more</a>
+              <a href="#" class="btn btn-lg btn-outline-primary w-sm-auto w-100 mt-4">Xem thêm</a>
             </div>
           </div>
           <div class="col-md-6 offset-lg-1 order-md-2 order-1 rellax" data-rellax-percentage="0.5" data-rellax-speed="0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, 32px, 0px);">
             <div class="bg-secondary rounded-3">
-              <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/01-light.png" alt="Image" class="d-dark-mode-none d-block">
-              <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/01-dark.png" alt="Image" class="d-dark-mode-block d-none">
+              <img src="assets/img/01-light.png" alt="Image" class="d-dark-mode-none d-block">
             </div>
           </div>
         </div>
 
         <!-- Service item -->
         <div class="row gy-4 mb-5 pb-xl-5 pb-md-4 pb-3">
-          <div class="col-lg-5 col-md-6 order-md-1 order-2 d-flex rellax" data-rellax-percentage="0.5" data-rellax-speed="-0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, -54px, 0px);">
+          <div class="col-lg-5 col-md-6 order-md-1 order-2 d-flex rellax" data-rellax-percentage="0.5" data-rellax-speed="-0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, 34px, 0px);">
             <div class="align-self-center pe-lg-0 pe-md-4">
-              <h3 class="mb-md-4">Web Development</h3>
-              <p class="mb-md-4 mb-3 fs-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in arcu ligula. Vestibulum euismod interdum risus eu interdum. Vivamus suscipit mauris at erat ultricies, vitae placerat nulla feugiat. Integer venenatis blandit efficitur.</p>
+              <h3 class="mb-md-4">Phát triển Website</h3>
+              <p class="mb-md-4 mb-3 fs-lg">Dịch vụ Thiết kế và Phát triển Website của 8tech mang đến giải pháp website hiện đại, chuẩn SEO và tối ưu hóa trải nghiệm người dùng. Chúng tôi tạo ra giao diện đẹp mắt, bảo mật cao, hoạt động mượt mà trên mọi thiết bị và dễ dàng nâng cấp. Với 8tech, website của bạn không chỉ thu hút mà còn giúp tăng trưởng doanh thu.</p>
               <hr class="my-md-4 my-3">
               <div class="d-flex align-items-center mt-n3 ms-n4 pb-lg-4 pb-md-2">
                 <div class="mt-3 ms-4 pe-md-2">
