--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="col-xl-10 mx-auto">
                 <h1 class="display-1 mb-md-4 pb-3">from 8 to cloud</h1>
                 <p class="text-body mx-auto mb-md-5 mb-4 pb-xl-2 pb-md-0 pb-sm-2 fs-5" style="max-width: 36.5rem;">
-                    Dựa trên nền tảng vững chắc, chúng tôi cam kết mang đến giải pháp hiệu quả nhất cho quý khách hàng.
+                  Dựa trên nền tảng vững chắc, chúng tôi cam kết mang đến giải pháp hiệu quả nhất cho quý khách hàng.
                 </p>
                 <a href="#" class="btn btn-lg btn-primary shadow-primary">Thuê ngay bây giờ</a>
               </div>
@@ -116,18 +116,17 @@
               <hr class="my-md-4 my-3">
               <div class="d-flex align-items-center mt-n3 ms-n4 pb-lg-4 pb-md-2">
                 <div class="mt-3 ms-4 pe-md-2">
-                  <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/vue-light.png" width="92" alt="Vue.js" class="d-dark-mode-none d-block me-sm-1">
-                  <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/vue-dark.png" width="92" alt="Vue.js" class="d-dark-mode-block d-none me-sm-1">
+                  <img src="assets/img/django-logo-positive.png" width="92" class="d-dark-mode-none d-block me-sm-1">
                 </div>
                 <div class="mt-3 ms-4 pe-md-2">
-                  <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/node-light.png" width="63" alt="Node.js" class="d-dark-mode-none d-block me-sm-1">
-                  <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/node-dark.png" width="63" alt="Node.js" class="d-dark-mode-block d-none me-sm-1">
+                  <img src="assets/img/wordpress.png" width="52"  class="d-dark-mode-none d-block me-sm-1">
+
                 </div>
                 <div class="mt-3 ms-4 pe-md-2">
-                  <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/java.png" width="77" alt="Java" class="d-block me-sm-1">
+                  <img src="assets/img/java.png" width="92"  class="d-dark-mode-none d-block me-sm-1">
                 </div>
                 <div class="mt-3 ms-4 pe-md-2">
-                  <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/react.png" width="104" alt="React" class="d-block me-sm-1">
+                  <img src="assets/img/react.png" width="92"  class="d-dark-mode-none d-block me-sm-1">
                 </div>
               </div>
               <a href="#" class="btn btn-lg btn-outline-primary w-sm-auto w-100 mt-4">Learn more</a>
@@ -135,8 +134,7 @@
           </div>
           <div class="col-md-6 offset-lg-1 order-md-2 order-1 rellax" data-rellax-percentage="0.5" data-rellax-speed="0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, 54px, 0px);">
             <div class="bg-secondary rounded-3">
-              <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/02-light.png" alt="Illustration" class="d-dark-mode-none d-block">
-              <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/02-dark.png" alt="Illustration" class="d-dark-mode-block d-none">
+              <img src="assets/img/02-light.png" alt="Illustration" class="d-dark-mode-none d-block">
             </div>
           </div>
         </div>
@@ -145,8 +143,8 @@
         <div class="row gy-4 mb-xl-3">
           <div class="col-lg-5 col-md-6 order-md-1 order-2 d-flex rellax" data-rellax-percentage="0.5" data-rellax-speed="-0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, -73px, 0px);">
             <div class="align-self-center pe-lg-0 pe-md-4">
-              <h3 class="mb-md-4">Software Testing</h3>
-              <p class="mb-md-4 mb-3 fs-lg">Phasellus posuere leo vitae quam faucibus cursus. Phasellus eu ex ultrices, facilisis ex at, aliquet felis. Cras id rutrum ante. Curabitur suscipit diam a facilisis laoreet. Duis id elit imperdiet eros vestibulum molestie. Nulla pellentesque justo enim,</p>
+              <h3 class="mb-md-4">Các công cụ tự động hóa</h3>
+              <p class="mb-md-4 mb-3 fs-lg">Dịch vụ viết tool tự động hóa của 8tech giúp doanh nghiệp tăng năng suất, giảm chi phí bằng cách tự động hóa các quy trình lặp lại. Chúng tôi tạo ra công cụ tùy chỉnh, tích hợp dễ dàng và đảm bảo hiệu quả vượt trội, hỗ trợ doanh nghiệp tối ưu vận hành trong thời đại số hóa.</p>
               <div class="d-flex flex-wrap text-nowrap mb-4">
                 <div class="me-4 pe-3">
                   <h5 class="h2 mb-1">85+</h5>
@@ -162,8 +160,7 @@
           </div>
           <div class="col-md-6 offset-lg-1 order-md-2 order-1 rellax" data-rellax-percentage="0.5" data-rellax-speed="0.5" data-disable-parallax-down="md" style="transform: translate3d(8px, 73px, 0px);">
             <div class="bg-secondary rounded-3">
-              <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/03-light.png" alt="Illustration" class="d-dark-mode-none d-block">
-              <img src="https://silicon.createx.studio/assets/img/landing/software-agency-2/services/03-dark.png" alt="Illustration" class="d-dark-mode-block d-none">
+              <img src="assets/img/03-light.png" alt="Illustration" class="d-dark-mode-none d-block">
             </div>
           </div>
         </div>
